--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": "Backwards",
   "license": "MIT",
-  "description": "",
+  "description": "A Llama 3 powered Discord bot",
   "devDependencies": {
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
