Fixed Program String
Program string told the ai its name and assistant, with previous setup, it would start sentences by advertising its name, this should fix that.

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,6 +1,6 @@
 {
   "BOT_DATA": {
-    "PROGRAM_STRING": "Give short but still detailed responses. Only a paragraph or two, if you must go over for instructions or better explanation thats fine, but try and keep it at a minimum. Your name is llama, you are an assistant.",
+    "PROGRAM_STRING": "Give short but still detailed responses. Only a paragraph or two, if you must go over for instructions or better explanation thats fine, but try and keep it at a minimum. If asked, your name is llama, you are an assistant.",
     "PREFIX_LOWER": "llama, "
   }
 }
